--- a/index.html
+++ b/index.html
@@ -40,10 +40,10 @@
     </a>
     <div class="socials">
         <ul class="social-icons">
-          <li><a class="linkedin" aria-label="LinkedIn" href="https://www.linkedin.com/in/jigar-sable/" target="_blank"><i class="fab fa-linkedin"></i></a></li> 
-          <li><a class="github" aria-label="GitHub" href="https://github.com/jigar-sable" target="_blank"><i class="fab fa-github"></i></a></li>
-          <li><a class="discord" aria-label="Discord" href="https://twitter.com/jigar_sable" target="_blank"><i class="fab fa-discord"></i></a></li>
-          <li><a class="instagram" aria-label="Instagram" href="https://www.instagram.com/jigarsable.dev"><i class="fab fa-instagram" target="_blank"></i></a></li>
+          <li><a class="linkedin" aria-label="LinkedIn" href="https://www.linkedin.com/in/sharan-gyawali-63b324278/" target="_blank"><i class="fab fa-linkedin"></i></a></li> 
+          <li><a class="github" aria-label="GitHub" href="https://github.com/Sharangyawali" target="_blank"><i class="fab fa-github"></i></a></li>
+          <li><a class="discord" aria-label="Discord" href="https://discordapp.com/users/sharan" target="_blank"><i class="fab fa-discord"></i></a></li>
+          <li><a class="instagram" aria-label="Instagram" href="https://www.instagram.com/sharangyawali/"><i class="fab fa-instagram" target="_blank"></i></a></li>
         </ul>
       </div>
     </div>
